force-app/main/default/objects/smagicinteract__SMS_Magic_SetUp_Tracker__c/smagicinteract__SMS_Magic_SetUp_Tracker__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting will hold the values of the steps that have been completed by the user.</description>
    <label>SMS Magic SetUp Tracker</label>
</CustomObject>