force-app/main/default/objects/smagicinteract__SMS_Magic_SetUp_Tracker__c/fields/smagicinteract__step_1__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__step_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Step 1</label>
    <type>Checkbox</type>
</CustomField>